--- a/index.html
+++ b/index.html
@@ -1,55 +1,21 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html> <head>
-<link rel='stylesheet' href='style.css' type='text/css' media='screen'/>
+<link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
+<link rel="stylesheet" href="css/style.css" type="text/css" media="screen"/>
 <meta charset="UTF-8">
-<meta name='viewport' content="width=device-width, initial-scale=1" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Prod-eng-core Pager</title>
 
+<script src="js/pager.js"></script>
 <script>
-function GetValue(where, what, instead)
-{
-  if (what in where) {
-    return where[what].$t;
-  }
-  return instead;
-}
-
-function SheetCallback(jsonIn) {
-  var entries = jsonIn.feed.entry;
-  var pager = "";
-
-  var past = GetValue(entries[0], "gsx$past", 0); 
-  var future = GetValue(entries[0], "gsx$future", 0); 
-
-  pager += '<body>';
-  pager += "<h3>Prod-eng-core pager statistics for " + (parseInt(past) + parseInt(future)) + " days (" + past + " past, " + future + " future)";
-  pager += '</h3>';
-  pager += '<table>';
-  pager += ' <thead>';
-  pager += '  <tr>';
-  pager += '    <th>Who</th>';
-  pager += '    <th>On-call hours</th>';
-  pager += '    <th>Days with on-call</th>';
-  pager += '  </tr>';
-  pager += ' </thead>';
-  pager += '<tbody>';
-
-  for (var row = 3; row < entries.length; row += 1) {
-    pager += "<tr><td data-label=Who>" + GetValue(entries[row], "gsx$header", "");
-		pager += "</td><td data-label=Hours>" + GetValue(entries[row], "gsx$past", "");
-		pager += "</td><td data-label=Days>" + GetValue(entries[row], "gsx$future", "");
-		pager += "</td></tr>\n";
-  }
-
-  pager += '</tbody>';
-  pager += '</table>';
-
-  document.getElementById("pager").innerHTML = pager;
+function Callback(jsonIn) {
+  document.getElementById("pager").innerHTML = DisplaySheet(jsonIn.feed);
 }
 </script>
 </head>
 
 <body>
 <div id="pager"></div>
-<script src="https://spreadsheets.google.com/feeds/list/1pWxS_UtkdZoN0I-7_E52ro7xF-iCKNqRq39Ps6YgBB0/2/public/values?alt=json-in-script&callback=SheetCallback"></script>
-</body> </html>
+<script src="https://spreadsheets.google.com/feeds/list/1pWxS_UtkdZoN0I-7_E52ro7xF-iCKNqRq39Ps6YgBB0/2/public/values?alt=json-in-script&callback=Callback"></script>
+</body>
+</html>
